; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_window.c_windowIfNewPeer.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_window.c_windowIfNewPeer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@OP_Compare = common dso_local global i32 0, align 4
@P4_KEYINFO = common dso_local global i32 0, align 4
@OP_Jump = common dso_local global i32 0, align 4
@OP_Copy = common dso_local global i32 0, align 4
@OP_Goto = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_4__*, i32, i32, i32)* @windowIfNewPeer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @windowIfNewPeer(i32* %0, %struct.TYPE_4__* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = call i32* @sqlite3GetVdbe(i32* %14)
  store i32* %15, i32** %11, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %17 = icmp ne %struct.TYPE_4__* %16, null
  br i1 %17, label %18, label %55

18:                                               ; preds = %5
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %12, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %24 = call i32* @sqlite3KeyInfoFromExprList(i32* %22, %struct.TYPE_4__* %23, i32 0, i32 0)
  store i32* %24, i32** %13, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = load i32, i32* @OP_Compare, align 4
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* %12, align 4
  %30 = call i32 @sqlite3VdbeAddOp3(i32* %25, i32 %26, i32 %27, i32 %28, i32 %29)
  %31 = load i32*, i32** %11, align 8
  %32 = load i32*, i32** %13, align 8
  %33 = bitcast i32* %32 to i8*
  %34 = load i32, i32* @P4_KEYINFO, align 4
  %35 = call i32 @sqlite3VdbeAppendP4(i32* %31, i8* %33, i32 %34)
  %36 = load i32*, i32** %11, align 8
  %37 = load i32, i32* @OP_Jump, align 4
  %38 = load i32*, i32** %11, align 8
  %39 = call i32 @sqlite3VdbeCurrentAddr(i32* %38)
  %40 = add nsw i32 %39, 1
  %41 = load i32, i32* %10, align 4
  %42 = load i32*, i32** %11, align 8
  %43 = call i32 @sqlite3VdbeCurrentAddr(i32* %42)
  %44 = add nsw i32 %43, 1
  %45 = call i32 @sqlite3VdbeAddOp3(i32* %36, i32 %37, i32 %40, i32 %41, i32 %44)
  %46 = load i32*, i32** %11, align 8
  %47 = call i32 @VdbeCoverageEqNe(i32* %46)
  %48 = load i32*, i32** %11, align 8
  %49 = load i32, i32* @OP_Copy, align 4
  %50 = load i32, i32* %8, align 4
  %51 = load i32, i32* %9, align 4
  %52 = load i32, i32* %12, align 4
  %53 = sub nsw i32 %52, 1
  %54 = call i32 @sqlite3VdbeAddOp3(i32* %48, i32 %49, i32 %50, i32 %51, i32 %53)
  br label %60

55:                                               ; preds = %5
  %56 = load i32*, i32** %11, align 8
  %57 = load i32, i32* @OP_Goto, align 4
  %58 = load i32, i32* %10, align 4
  %59 = call i32 @sqlite3VdbeAddOp2(i32* %56, i32 %57, i32 0, i32 %58)
  br label %60

60:                                               ; preds = %55, %18
  ret void
}

declare dso_local i32* @sqlite3GetVdbe(i32*) #1

declare dso_local i32* @sqlite3KeyInfoFromExprList(i32*, %struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @sqlite3VdbeAddOp3(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @sqlite3VdbeAppendP4(i32*, i8*, i32) #1

declare dso_local i32 @sqlite3VdbeCurrentAddr(i32*) #1

declare dso_local i32 @VdbeCoverageEqNe(i32*) #1

declare dso_local i32 @sqlite3VdbeAddOp2(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
